trunk/Archive2/38/7d2b1b24fd354f/output
main.cpp: In function 'int main()':
main.cpp:21:85: error: 'constexpr T clamp(T, T, T) [with T = CustomType]' called in a constant expression
     constexpr CustomType y = clamp(CustomType(2.0), CustomType(0.0), CustomType(1.0));
                                                                                     ^
main.cpp:5:13: note: 'constexpr T clamp(T, T, T) [with T = CustomType]' is not usable as a constexpr function because:
 constexpr T clamp(T value, T minimum, T maximum)
             ^
main.cpp:7:15: error: call to non-constexpr function 'bool CustomType::operator<(const CustomType&) const'
  return value < minimum ? minimum : (value > maximum ? maximum : value);
               ^
